--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
         <main>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-6"></div>
-                    <div class="col-6"></div>
+                    <div class="col-6">Devotion that never ends</div>
+                    <div class="col-6">img</div>
                 </div>
 
                 <div class="row">
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
+                    <div class="col-4">img 1</div>
+                    <div class="col-4">img 2</div>
+                    <div class="col-4">img 3</div>
+                    <div class="col-4">img 4</div>
+                    <div class="col-4">img 5</div>
+                    <div class="col-4">img 6</div>
                 </div>
             </div>
 
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-12"></div>
+                    <div class="col-12">Working process</div>
                     <div class="col-2"></div>
                     <div class="col-2"></div>
                     <div class="col-2"></div>
@@ -78,15 +78,17 @@
 
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12"></div>
+                    <div class="col-12">
+                        Want work with us? Send us a message!
+                    </div>
                 </div>
             </div>
 
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-3"></div>
-                    <div class="col-3"></div>
-                    <div class="col-3"></div>
+                    <div class="col-3">img 1</div>
+                    <div class="col-3">img 1</div>
+                    <div class="col-3">img 1</div>
                 </div>
             </div>
         </main>
@@ -94,7 +96,7 @@
         <footer>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12"></div>
+                    <div class="col-12">FOOTER</div>
                 </div>
             </div>
         </footer>
