--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <a><img src="./pictures/svg/svg-1.svg" alt=""></a>
                 </button>
                 <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo01">
                     <a class="navbar-brand" href="#">
@@ -51,52 +51,198 @@
         <!-- MAIN -->
         <main>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-6">Devotion that never ends</div>
-                    <div class="col-6">img</div>
+                <!-- JUMBOTRON -->
+                <div class="row mt-3 mb-5">
+                    <div class="col-6 d-flex justify-content-end">
+                        <div class="w-75 mt-5">
+                            <h1 class="fw-light" style="font-size: 65px;">
+                                Devotion that<br>never
+                                <span class="fst-italic fw-bold">ends</span>
+                            </h1>
+                            <p class="text-black-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br>
+                                Dolorem deleniti excepturi perferendis aliquam.
+                            </p>
+                            <button type="button" class="but1 text-dark fw-bold mt-3">READ MORE</button>
+                        </div>
+                    </div>
+                    <div class="col-6 d-flex align-items-center ">
+                        <div class="jumbo-photo ms-5">
+                            <img class="w-100" src="./pictures/h-2-slider-img-15.png" alt="">
+                        </div>
+                        <div class="jumbo-photo">
+                            <img class="w-100" src="./pictures/h-2-slider-img-16.png" alt="">
+                        </div>
+                        <div class="leaf1">
+                            <img class="w-75" src="./pictures/short-slider-rev-1-img-2.png" alt="">
+                        </div>
+                        <div class="leaf2">
+                            <img class="w-75" src="./pictures/h-2-slider-img-12.png" alt="">
+                        </div>
+                        <div class="leaf3">
+                            <img class="w-75" src="./pictures/h-2-slider-img-13.png" alt="">
+                        </div>
+                        <div class="leaf4">
+                            <img class="w-75" src="./pictures/h-2-slider-img-14.png" alt="">
+                        </div>
+                        <div class="leaf5">
+                            <img class="w-75" src="./pictures/short-slider-rev-1-img-6.png" alt="">
+                        </div>
+                        <div class="leaf6">
+                            <img class="w-75" src="./pictures/h-2-slider-img-17.png" alt="">
+                        </div>
+                    </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-4">img 1</div>
-                    <div class="col-4">img 2</div>
-                    <div class="col-4">img 3</div>
-                    <div class="col-4">img 4</div>
-                    <div class="col-4">img 5</div>
-                    <div class="col-4">img 6</div>
-                </div>
-            </div>
-
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12">Working process</div>
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-                </div>
-            </div>
-
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        Want work with us? Send us a message!
+                <div class="row g-0 pt-5">
+                    <div class="col-4">
+                        <img class="w-100" src="./pictures/h-2-port-img-1.jpg" alt="">
+                        <div class="position-absolute top-50 start-0 translate-middle-y">
+                            <h4>Illustrations of novels</h4>
+                            <p class="fst-italic">Illustration</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img class="w-100" src="./pictures/h-2-port-img-2.jpg" alt="">
+                        <div class="position-absolute top-50 start-0 translate-middle-y">
+                            <h4>Illustrations of novels</h4>
+                            <p class="fst-italic">Illustration</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img class="w-100" src="./pictures/h-2-port-img-3.jpg" alt="">
+                        <div class="position-absolute top-50 start-0 translate-middle-y">
+                            <h4>Illustrations of novels</h4>
+                            <p class="fst-italic">Illustration</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img class="w-100" src="./pictures/h-2-port-img-4.jpg" alt="">
+                        <div class="etichetta position-absolute top-50 start-0 translate-middle-y">
+                            <h4>Illustrations of novels</h4>
+                            <p class="fst-italic">Illustration</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img class="w-100" src="./pictures/h-2-port-img-5.jpg" alt="">
+                        <div class="position-absolute top-50 start-0 translate-middle-y">
+                            <h4>Illustrations of novels</h4>
+                            <p class="fst-italic">Illustration</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img class="w-100" src="./pictures/h-2-port-img-6.jpg" alt="">
+                        <div class="position-absolute top-50 start-0 translate-middle-y">
+                            <h4>Illustrations of novels</h4>
+                            <p class="fst-italic">Illustration</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-3">img 1</div>
-                    <div class="col-3">img 1</div>
-                    <div class="col-3">img 1</div>
+                    <div class="col-12 text-center m-5">
+                        <h2 class="fw-light" style="font-size: 50px;">
+                            Working
+                            <span class="fw-bold fst-italic">process</span>
+                        </h2>
+                    </div>
+                    <div class="col-9">
+                        <img class="w-100 line" src="./pictures/svg/svg-3.svg" alt="">
+                        <div class="row mb-5">
+                            <div class="col-3 text-center">
+                                <i class="fa-solid fa-lightbulb icon rounded-circle p-5"></i>
+                                <h5 class="fw-normal mt-2">First theres an idea</h5>
+                                <p class="text-black-50 p2">
+                                    Lorem ipsum dolor, sit adipisicing elit.<br>
+                                    Dolorem deleniti excepturi.
+                                </p>
+                            </div>
+                            <div class="col-3 text-center">
+                                <i class="fa-regular fa-comment icon2 rounded-circle p-5"></i>
+                                <h5 class="fw-normal mt-2">Then we talk about</h5>
+                                <p class="text-black-50 p2">
+                                    Lorem ipsum dolor, sit adipisicing elit.<br>
+                                    Dolorem deleniti excepturi.
+                                </p>
+                            </div>
+                            <div class="col-3 text-center">
+                                <i class="fa-solid fa-cloud icon3 rounded-circle p-5"></i>
+                                <h5 class="fw-normal mt-2">And we think about</h5>
+                                <p class="text-black-50 p2">
+                                    Lorem ipsum dolor, sit adipisicing elit.<br>
+                                    Dolorem deleniti excepturi.
+                                </p>
+                            </div>
+                            <div class="col-3 text-center">
+                                <i class="fa-solid fa-pencil icon4 rounded-circle p-5"></i>
+                                <h5 class="fw-normal mt-2">So we drow along</h5>
+                                <p class="text-black-50 p2">
+                                    Lorem ipsum dolor, sit adipisicing elit.<br>
+                                    Dolorem deleniti excepturi.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-fluid  jumbo-2">
+                <div class="row justify-content-center">
+                    <div class="col-12 text-center mt-5 p-5">
+                        <h2 class="fw-light m-3" style="font-size: 50px;">
+                            Want work with us? Send us
+                            <span class="fw-bold fst-italic">a message!</span>
+                        </h2>
+                        <p class="text-black-50">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Quisquam qui fugit cum quia soluta quasi exercitationem
+                            commodi provident, beatae dolores totam tempora laborum.<br>
+                            Iusto possimus sint natus sunt optio commodi.
+                        </p>
+                        <button type="button" class="but2 text-dark fw-bold mt-3 mb-5">CONTACT</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row  justify-content-center m-5">
+                    <div class="col-3">
+                        <img class="w-100" src="./pictures/h-2-blog-img-1.jpg" alt="">
+                        <p class="fs-5 lh-sm mt-3">
+                            This way, loves: a detailed guide
+                            through new design <br>
+                            <span class="fst-italic by">by Emily Fields</span>
+                        </p>
+                    </div>
+                    <div class="col-3">
+                        <img class="w-100" src="./pictures/h-2-blog-img-2.jpg" alt="">
+                        <p class="fs-5 lh-sm mt-3">
+                            I try to give people a different way
+                            of looking art <br>
+                            <span class="fst-italic by">by Emily Fields</span>
+                        </p>
+                    </div>
+                    <div class="col-3">
+                        <img class="w-100" src="./pictures/h-2-blog-img-3.jpg" alt="">
+                        <p class="fs-5 lh-sm mt-3">
+                            Introduce Richard Loperrière of
+                            those amazing features <br>
+                            <span class="fst-italic by">by Emily Fields</span>
+                        </p>
+                    </div>
+
                 </div>
             </div>
         </main>
 
         <footer>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">FOOTER</div>
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-3">FOOTER</div>
+                    <div class="col-3">FOOTER</div>
+                    <div class="col-3">FOOTER</div>
+                    <div class="col-3">FOOTER</div>
                 </div>
             </div>
         </footer>
