--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
 
 <body>
     <div id="app">
+        <!-- SEZIONE NAV-BAR -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
+
+                <!--burger-menu-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <a><img src="./pictures/svg/svg-1.svg" alt=""></a>
                 </button>
+
+                <!--nav-bar-->
                 <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo01">
                     <a class="navbar-brand" href="#">
                         <img class="w-75" src="./pictures/logo-sidearea-1.png" alt="">
@@ -48,11 +53,14 @@
                 </div>
             </div>
         </nav>
+
         <!-- MAIN -->
         <main>
             <div class="container-fluid">
                 <!-- JUMBOTRON -->
                 <div class="row mt-3 mb-5">
+
+                    <!--parte sx jumbo-->
                     <div class="col-6 d-flex justify-content-end">
                         <div class="w-75 mt-5">
                             <h1 class="fw-light" style="font-size: 65px;">
@@ -65,6 +73,8 @@
                             <button type="button" class="but1 text-dark fw-bold mt-3">READ MORE</button>
                         </div>
                     </div>
+
+                    <!--parte dx jumbo-->
                     <div class="col-6 d-flex align-items-center ">
                         <div class="jumbo-photo ms-5">
                             <img class="w-100" src="./pictures/h-2-slider-img-15.png" alt="">
@@ -72,6 +82,7 @@
                         <div class="jumbo-photo">
                             <img class="w-100" src="./pictures/h-2-slider-img-16.png" alt="">
                         </div>
+                        <!--img foglie in pos. absolute-->
                         <div class="leaf1">
                             <img class="w-75" src="./pictures/short-slider-rev-1-img-2.png" alt="">
                         </div>
@@ -93,6 +104,7 @@
                     </div>
                 </div>
 
+                <!-- BLOCCO CARDS -->
                 <div class="row g-0 pt-5">
                     <div class="col-4">
                         <img class="w-100" src="./pictures/h-2-port-img-1.jpg" alt="">
@@ -139,6 +151,7 @@
                 </div>
             </div>
 
+            <!--parte del work process-->
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center m-5">
@@ -187,6 +200,7 @@
                 </div>
             </div>
 
+            <!-- SECONDO JUMBOTRON -->
             <div class="container-fluid  jumbo-2">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center mt-5 p-5">
@@ -205,6 +219,7 @@
                 </div>
             </div>
 
+            <!-- ULMA SEZIONE MAI -->
             <div class="container">
                 <div class="row  justify-content-center m-5">
                     <div class="col-3">
@@ -231,18 +246,47 @@
                             <span class="fst-italic by">by Emily Fields</span>
                         </p>
                     </div>
-
                 </div>
             </div>
         </main>
 
+        <!-- PARTE FOOTER -->
         <footer>
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-3">FOOTER</div>
-                    <div class="col-3">FOOTER</div>
-                    <div class="col-3">FOOTER</div>
-                    <div class="col-3">FOOTER</div>
+            <div class="container p-5">
+                <div class="row justify-content-center">
+                    <div class="col-8">
+                        <div class="row">
+                            <div class="col-3">
+                                <a class="text-decoration-none text-dark" href="">
+                                    <img class="w-50" src="./pictures/logo-sidearea-1.png" alt=""><br>
+                                    <span class="p2">Let's Get Creative</span>
+                                </a>
+                            </div>
+                            <div class="col-3">
+                                <a class="text-decoration-none text-dark" href="">
+                                    <span class="p2">maree.qode@gmail.com</span><br>
+                                    <span class="p2">+44 645 321 789</span>
+                                </a>
+                            </div>
+                            <div class="col-3">
+                                <a class="text-decoration-none text-dark" href="">
+                                    <span class="p2">Avenue d'Auderghem 10</span><br>
+                                    <span class="p2">1040 Brussels, Belgium</span>
+                                </a>
+                            </div>
+                            <div class="col-3">
+                                <a class="text-decoration-none text-dark" href="">
+                                    <span class="p2">Stay in touch with us</span><br>
+                                </a>
+                                <div class="d-flex justify-content-between w-50">
+                                    <a class="fa-brands fa-twitter text-decoration-none text-dark p2" href=""></a>
+                                    <a class="fa-brands fa-pinterest-p text-decoration-none text-dark p2" href=""></a>
+                                    <a class="fa-brands fa-facebook-f text-decoration-none text-dark p2" href=""></a>
+                                    <a class="fa-brands fa-linkedin-in text-decoration-none text-dark p2" href=""></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </footer>
