--- a/index.html
+++ b/index.html
@@ -40,14 +40,12 @@
                     </a>
                     <nav>
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="">HOME</a>
-                            </li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
+                            <li class="by"><a class="nav-link text-dark" href="">HOME</a></li>
+                            <li class="by"><a class="nav-link text-dark" href="">PAGES</a></li>
+                            <li class="by"><a class="nav-link text-dark" href="">PORTFOLIO</a></li>
+                            <li class="by"><a class="nav-link text-dark" href="">BLOG</a></li>
+                            <li class="by"><a class="nav-link text-dark" href="">SHOP</a></li>
+                            <li class="by"><a class="nav-link text-dark" href="">ELEMENTS</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -103,50 +101,93 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="gd">
+                    <div class="slider"></div>
+                    <div class="slider"></div>
+                    <div class="slider"></div>
+                </div>
                 <!-- BLOCCO CARDS -->
                 <div class="row g-0 pt-5">
+                    <!--card 1-->
                     <div class="col-4">
                         <img class="w-100" src="./pictures/h-2-port-img-1.jpg" alt="">
                         <div class="position-absolute top-50 start-0 translate-middle-y">
                             <h4>Illustrations of novels</h4>
                             <p class="fst-italic">Illustration</p>
                         </div>
+                        <div class="shop">
+                            <img class="bg-danger d-block w-25 p-1" src="./pictures/svg/svg-4.svg" alt="">
+                            <img class="bg-light w-25 p-1" src="./pictures/svg/svg-6.svg" alt="">
+                        </div>
                     </div>
+                    <!--card 2-->
                     <div class="col-4">
                         <img class="w-100" src="./pictures/h-2-port-img-2.jpg" alt="">
                         <div class="position-absolute top-50 start-0 translate-middle-y">
                             <h4>Illustrations of novels</h4>
                             <p class="fst-italic">Illustration</p>
                         </div>
+                        <div class="shop">
+                            <img class="bg-danger d-block w-25 p-1" src="./pictures/svg/svg-4.svg" alt="">
+                            <img class="bg-light w-25 p-1" src="./pictures/svg/svg-6.svg" alt="">
+                        </div>
                     </div>
+                    <!--card 3-->
                     <div class="col-4">
                         <img class="w-100" src="./pictures/h-2-port-img-3.jpg" alt="">
                         <div class="position-absolute top-50 start-0 translate-middle-y">
                             <h4>Illustrations of novels</h4>
                             <p class="fst-italic">Illustration</p>
                         </div>
+                        <div class="shop">
+                            <img class="bg-danger d-block w-25 p-1" src="./pictures/svg/svg-4.svg" alt="">
+                            <img class="bg-light w-25 p-1" src="./pictures/svg/svg-6.svg" alt="">
+                        </div>
                     </div>
+                    <!--card 4-->
                     <div class="col-4">
                         <img class="w-100" src="./pictures/h-2-port-img-4.jpg" alt="">
                         <div class="etichetta position-absolute top-50 start-0 translate-middle-y">
                             <h4>Illustrations of novels</h4>
                             <p class="fst-italic">Illustration</p>
                         </div>
+                        <div class="shop">
+                            <img class="bg-danger d-block w-25 p-1" src="./pictures/svg/svg-4.svg" alt="">
+                            <img class="bg-light w-25 p-1" src="./pictures/svg/svg-6.svg" alt="">
+                        </div>
                     </div>
+                    <!--card 5-->
                     <div class="col-4">
                         <img class="w-100" src="./pictures/h-2-port-img-5.jpg" alt="">
                         <div class="position-absolute top-50 start-0 translate-middle-y">
                             <h4>Illustrations of novels</h4>
                             <p class="fst-italic">Illustration</p>
                         </div>
+                        <div class="shop">
+                            <img class="bg-danger d-block w-25 p-1" src="./pictures/svg/svg-4.svg" alt="">
+                            <img class="bg-light w-25 p-1" src="./pictures/svg/svg-6.svg" alt="">
+                        </div>
                     </div>
+                    <!--card 6-->
                     <div class="col-4">
                         <img class="w-100" src="./pictures/h-2-port-img-6.jpg" alt="">
                         <div class="position-absolute top-50 start-0 translate-middle-y">
                             <h4>Illustrations of novels</h4>
                             <p class="fst-italic">Illustration</p>
                         </div>
+                        <div class="shop">
+                            <img class="bg-danger d-block w-25 p-1" src="./pictures/svg/svg-4.svg" alt="">
+                            <img class="bg-light w-25 p-1" src="./pictures/svg/svg-6.svg" alt="">
+                        </div>
+                        <!--arrow-->
+                        <a href="">
+                            <img class="position-absolute top-0 end-0 footer me-5 p-1" src="./pictures/svg/svg-2.svg"
+                                alt="">
+                        </a>
+                        <a href="">
+                            <img class="position-absolute bottom-0 end-0 footer mb-4 me-5 p-1"
+                                src="./pictures/svg/svg-2.svg" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -198,6 +239,10 @@
                         </div>
                     </div>
                 </div>
+                <!--arrow-->
+                <a href="">
+                    <img class="position-absolute bottom-0 end-0 footer mb-4 p-1" src="./pictures/svg/svg-2.svg" alt="">
+                </a>
             </div>
 
             <!-- SECONDO JUMBOTRON -->
@@ -247,11 +292,15 @@
                         </p>
                     </div>
                 </div>
+                <!--arrow-->
+                <a href="">
+                    <img class="position-absolute top-0 end-0 footer p-1" src="./pictures/svg/svg-2.svg" alt="">
+                </a>
             </div>
         </main>
 
         <!-- PARTE FOOTER -->
-        <footer>
+        <footer class="footer">
             <div class="container p-5">
                 <div class="row justify-content-center">
                     <div class="col-8">
@@ -288,6 +337,10 @@
                         </div>
                     </div>
                 </div>
+                <!--arrow-->
+                <a href="">
+                    <img class="position-absolute bottom-0 end-0 pb-3" src="./pictures/svg/svg-2.svg" alt="">
+                </a>
             </div>
         </footer>
     </div>
