--- a/index.html
+++ b/index.html
@@ -26,27 +26,29 @@
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
 
-                <!--burger-menu-->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <a><img src="./pictures/svg/svg-1.svg" alt=""></a>
-                </button>
-
                 <!--nav-bar-->
                 <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo01">
                     <a class="navbar-brand" href="#">
                         <img class="w-75" src="./pictures/logo-sidearea-1.png" alt="">
                     </a>
-                    <nav>
-                        <ul class="navbar-nav">
-                            <li class="by"><a class="nav-link text-dark" href="">HOME</a></li>
-                            <li class="by"><a class="nav-link text-dark" href="">PAGES</a></li>
-                            <li class="by"><a class="nav-link text-dark" href="">PORTFOLIO</a></li>
-                            <li class="by"><a class="nav-link text-dark" href="">BLOG</a></li>
-                            <li class="by"><a class="nav-link text-dark" href="">SHOP</a></li>
-                            <li class="by"><a class="nav-link text-dark" href="">ELEMENTS</a></li>
+                    <nav class="d-flex">
+                        <ul class="navbar-nav" v-show="showList">
+                            <li v-for="link in menu" class="fw-semibold me-3 ms-3 by">
+                                <a class="nav-link text-dark" href="">
+                                    {{ link }}
+                                </a>
+                            </li>
+                            <!--
+                                <li class="by"><a class="nav-link text-dark" href="">PAGES</a></li>
+                                <li class="by"><a class="nav-link text-dark" href="">PORTFOLIO</a></li>
+                                <li class="by"><a class="nav-link text-dark" href="">BLOG</a></li>
+                                <li class="by"><a class="nav-link text-dark" href="">SHOP</a></li>
+                                <li class="by"><a class="nav-link text-dark" href="">ELEMENTS</a></li>
+                            -->
                         </ul>
+                        <a @click.prevent="toggleLIst" href="">
+                            <img class="w-75" src="./pictures/svg/svg-1.svg" alt="">
+                        </a>
                     </nav>
                 </div>
             </div>
