correzione final commit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <!--nav-bar dx-->
                     <nav class="d-flex">
                         <ul class="navbar-nav" v-show="showList">
-                            <li v-for="link in menu" class="fw-semibold me-3 ms-3 by">
+                            <li v-for="link in (menu.links)" class="fw-semibold me-3 ms-3 by">
                                 <a class="nav-link text-dark shad" href="">
                                     {{ link }}
                                 </a>
